--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <div class="main-nav">
         <ul class="nav">
-          <li class="name"><a href="index.html">Samuel Cleophas</li>
+          <li class="name"><a href="index.html">Samuel Cleophas</a></li>
           <li><a href="index.html">Home</a></li>
           <li><a href="experience.html">Experience</a></li>
         </ul>
