FINALLY fixed the & character.

--- a/experience.html
+++ b/experience.html
@@ -41,7 +41,7 @@
         <ul class="transferables">
           <li>Autonomous Robotics</li>
           <li>Component Testing and Engineering Reporting</li>
-          <li>Liaison between R"&"D and Marketing Teams</li>
+          <li>Liaison between R&amp;D and Marketing Teams</li>
           <li>Imbedded Electronic Systems</li>
           <li>Introductory Computer Vision (OpenCV)</li>
         </ul>
@@ -49,7 +49,7 @@
         <ul class="transferables">
           <li>WLAN Systems</li>
           <li>Databasing and Inventory Management</li>
-          <li>Liaison between R"&"D and Marketing Teams</li>
+          <li>Liaison between R&amp;D and Marketing Teams</li>
           <li>E-Commerce Platforms and CMS</li>
         </ul>
         <h3>Sales Representative  |  25/7/2015 – 14/10/2015</h3>
